# TCC

./: .gitignore  fly.toml  makefile  package-lock.json
backend/: Dockerfile  banco-de-dados.db  docker-compose.yaml  fly.toml  main.py  makefile  poetry.toml  pyproject.toml  requirements.txt
backend/contextos/autenticacao/: modelos_autenticacao.py  repositorio_autenticacao.py  rota_autenticacao.py  services_autenticacao.py
backend/contextos/carrinho/: entidade_carrinho.py  modelo_carrinho.py  repositorio_carrinho.py  rota_carrinho.py  services_carrinho.py
backend/contextos/compras/: entidade_compras.py
backend/contextos/livros/: entidade_livro.py  modelos_livro.py  repositorio_livro.py  rota_livro.py  services_livro.py
backend/contextos/usuarios/: entidade_usuario.py  modelos_usuario.py  rota_usuario.py
backend/contextos/vendas/: entidade_vendas.py  modelo_vendas.py  repositorio_vendas.py  rota_vendas.py  services_vendas.py
backend/libs/autenticacao/: config.py
backend/libs/database/: sqlalchemy.py  uuid.py
backend/libs/middleware/: logs.py
backend/libs/repository/: repositorio_interface.py
frontend/: Dockerfile  docker-compose.yaml  package-lock.json  package.json
frontend/public/: index.html
frontend/src/App/: App.css  App.js
frontend/src/Callcenter/: Callcenter.js
frontend/src/Cart/: Cart.css  Cart.js
frontend/src/Home/: Home.css  Home.js
frontend/src/MyBooks/: MyBooks.js
frontend/src/MyPurchases/: MyPurchases.js
frontend/src/MySales/: MySales.js
infra/: docker-compose-deploy.yaml  docker-compose.yaml
(+1 files in other folders)
